rancher-to-aks-migration/kubernetes/network/allow-petclinic-to-mysql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-petclinic-to-mysql
  namespace: petclinic
spec:
  podSelector:
    matchLabels:
      app: petclinic
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: mysql
      ports:
        - protocol: TCP
          port: 3306
